Select custom field not showing 0 values - FIXED
OSM address encoder fails if site is non SSL - FIXED
Added setting to be able to disable Yoast SEO on GD pages (if active) - ADDED
Yoast details page og and twitter descriptions using template text instead of post text - FIXED
SD Widget added to be able to display the catregory description text - ADDED

v2.0.0.13-beta
Page templates for building layouts now restricted from frontend viewing - CHANGED
GD page settings now contains link to edit/view pages when set - ADDED
Custom fields icon now has option to select font awesome icon from a list - ADDED
validation_pattern for custom fields can have slashes stripped which can break validation - FIXED
File upload custom field can now accept multiple files - CHANGED
File uploads now stored in GD attachments table - CHANGED
Get Directions link moved from CF to widget/shortcode - CHANGED
Get user location for directions now uses manual set if user locations cant be auto detected - ADDED
Setup wizard does not warn user if they try to continue while dummy data is being installed - FIXED
Logo predefined field added, post_images shortcode/widget now has option to show logo as first image - ADDED
Preview listing link now has icon to show it opens in new window - ADDED
Tabs show even if no content in them - FIXED
Option added in GD Listings widget to show nearest listings - ADDED
Titles and Meta settings page added and implemented - ADDED
Shortcode builder outputs multiselect values as array instead of sting - FIXED
Default placeholder images for listings will now use the image title/caption if set - CHANGED
Details slider initial load height very tall, max-height set - CHANGED
Review output given GD specific basic styles - ADDED
Some CSS changes to simplify and improve the basics - CHANGED

v2.0.0.12-beta
Attachment table date_gmt field added - ADDED
Widget show/hide settings improved for better UI - CHANGED